--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,5 @@ jobs:
       run: npm run build
 
     - name: Run unit tests
-      run: npm run test
+      run: npx vitest run --passWithNoTests
+
