--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,10 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v2
+    - name: Upload build artifacts
+      if: success()
+      uses: actions/upload-pages-artifact@v3
+      with:
+        name: github-pages-${{ github.run_id }}
+        path: dist
+
