--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,13 +7,11 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
+  test-matrix:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        node-version: [22.x]
-
+        node-version: [18.x, 20.x, 22.x]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -29,30 +27,40 @@ jobs:
       - name: Lint code
         run: npm run lint
 
-      - name: Type check and Build project
-        run: npm run build
+      - name: Type check
+        run: tsc --noEmit
 
       - name: Run unit tests with Vitest
         run: npx vitest run --passWithNoTests
 
-      - name: Upload build artifacts
-        uses: actions/upload-pages-artifact@v3
-        with:
-          name: github-pages-${{ github.run_id }}
-          path: dist
-
-  deploy:
-    needs: build
+  build-and-deploy:
     runs-on: ubuntu-latest
+    needs: test-matrix
     permissions:
       pages: write
       id-token: write
 
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build project
+        run: npm run build
+
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          name: github-pages
+          path: dist
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
