--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,12 +6,20 @@ on:
   pull_request:
     branches: ["main"]
 
+# สิทธิ์ที่ต้องใช้สำหรับ Deploy GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
-  test-matrix:
+  build:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         node-version: [18.x, 20.x, 22.x]
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -27,40 +35,27 @@ jobs:
       - name: Lint code
         run: npm run lint
 
-      - name: Type check
-        run: tsc --noEmit
+      - name: Type check and Build project
+        run: npm run build
 
       - name: Run unit tests with Vitest
         run: npx vitest run --passWithNoTests
 
-  build-and-deploy:
-    runs-on: ubuntu-latest
-    needs: test-matrix
-    permissions:
-      pages: write
-      id-token: write
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Use Node.js 20.x
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20.x
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build project
-        run: npm run build
-
-      - name: Upload GitHub Pages artifact
+      - name: Upload build artifact for GitHub Pages
         uses: actions/upload-pages-artifact@v3
         with:
-          name: github-pages
+          name: github-pages-${{ github.run_id }}
           path: dist
 
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          artifact_name: github-pages-${{ github.run_id }}
